# solar3d

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  Sources.md  sources.md  toolchain-mingw.cmake
assets/cartoon/CartoonSpaceShip/: CartoonSpaceShip_Example.blend
assets/cartoon/__MACOSX/CartoonSpaceShip/: ._CartoonSpaceShip_Example.blend
assets/models/: spaceship.mtl  tie_fighter.gltf
include/: Camera.h  Colour.h  Defaults.h  Engine.h  Input.h  Key.h  Light.h  Logger.h  Material.h  Mesh.h  Model.h  Object.h  ObjectLoader.h  Planets.h  Renderer.h  Shader.h  ShaderManager.h  Skybox.h  Texture.h  Transform.h  Vertex.h  Window.h  WindowManager.h
include/App/: AsteroidBelt.h  Planets.h
include/Component/: Material.h  Vertex.h
include/Core/: Window.h
include/Core/Input/: Input.h
include/GLFW/: WrapperGLFW.h
include/Misc/: Colour.h  Logger.h
include/Render/: Mesh.h  Renderer.h
include/Scene/: Light.h  Model.h  Object.h  Skybox.h
include/old/: MeshFactory.h  TextureManager.h  Transform.h  Vertex.h
old_include/: Camera.h  Mesh.h  Object.h  Scene.h  Skybox.h  UIManager.h
old_include/GLFW/: WrapperGLFW.h
old_include/glad/: glad.h
old_shaders/: fs.frag  sky.frag  sky.vert  skybox.frag  skybox.vert  vs.vert
old_shaders/lighting/: all.frag  ambient_only.frag  diffuse_only.frag  no_light.frag  specular_only.frag
shaders/: fs.frag  main.frag  main.vert  sun.frag  sun.vert  vs.vert
src/: AsteroidBelt.cpp  Camera.cpp  Defaults.cpp  Engine.cpp  Input.cpp  Key.cpp  Main.cpp  Mesh.cpp  Model.cpp  Object.cpp  ObjectLoader.cpp  Planets.cpp  Renderer.cpp  Shader.cpp  ShaderManager.cpp  Skybox.cpp  Texture.cpp  Window.cpp  WrapperGLFW.cpp
src/App/: AsteroidBelt.cpp  Planets.cpp
src/Core/: Camera.cpp  Input.cpp  Key.cpp  Window.cpp
src/Render/: Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
src/Scene/: Model.cpp  Object.cpp  Skybox.cpp
src/old/: Mesh.cpp  Skybox.cpp  TextureManager.cpp  UIManager.cpp
